--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                 <div class="home__social">
                     <a href="https://www.linkedin.com/in/shehani-sandamini-ab96ab287?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                     <a href="https://github.com/shehani26/desktop-tutorial" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://www.facebook.com/shehani.sandamini.9?mibextid=ZbWKwL" class="home__social-icon"><i class='bx bxl-facebook' ></i></a>
+                    <a href="https://instagram.com/sheehaniiiiii?igshid=OGQ5ZDc2ODk2ZA==" class="home__social-icon"><i class='bx bxl-instagram' ></i></a>
                 </div>
 
                 <div class="home__img">
@@ -136,7 +138,7 @@
                     </div>
                     
                     <div>              
-                        <img src="assets/img/work3.jpg" alt="" class="skills__img">
+                        <img src="assets/img/img2.jpeg" alt="" class="skills__img">
                     </div>
                 </div>
             </section>
